Change bakery name to VEC's Bakery
Updated the bakery name and title in the shop page.

--- a/bakery site/shop.html
+++ b/bakery site/shop.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shop | Loaf & Crust</title>
+    <title>Shop | VEC's Bakery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="navbar">
-    <h2>Loaf & Crust</h2>
+    <h2>VEC's Bakery</h2>
     <div>
         <a href="index.html">Home</a>
         <a href="shop.html">Shop</a>
@@ -37,8 +37,9 @@
 </div>
 
 <footer>
-    © 2026 Loaf & Crust Bakery
+    © 2026 VEC's Bakery
 </footer>
 
 </body>
 </html>
+
