Update bakery name to VEC's Bakery

--- a/bakery site/product.html
+++ b/bakery site/product.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="navbar">
-    <h2>Loaf & Crust</h2>
+    <h2>VEC's Bakery</h2>
     <div>
         <a href="index.html">Home</a>
         <a href="shop.html">Shop</a>
@@ -28,8 +28,9 @@
 </div>
 
 <footer>
-    © 2026 Loaf & Crust Bakery
+    © 2026 VEC's Bakery
 </footer>
 
 </body>
 </html>
+
