Update contact page branding to VEC's Bakery

--- a/bakery site/contact.html
+++ b/bakery site/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact | Loaf & Crust</title>
+    <title>Contact | VEC's Bakery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="navbar">
-    <h2>Loaf & Crust</h2>
+    <h2>VEC's Bakery</h2>
     <div>
         <a href="index.html">Home</a>
         <a href="shop.html">Shop</a>
@@ -26,8 +26,9 @@
 </div>
 
 <footer>
-    © 2026 Loaf & Crust Bakery
+    © 2026 VEC's Bakery
 </footer>
 
 </body>
 </html>
+
