--- a/bakery site/about.html
+++ b/bakery site/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About | Loaf & Crust</title>
+    <title>About | VEC's Bakery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="navbar">
-    <h2>Loaf & Crust</h2>
+    <h2>VEC's Bakery</h2>
     <div>
         <a href="index.html">Home</a>
         <a href="shop.html">Shop</a>
@@ -16,13 +16,14 @@
 
 <div class="section">
     <h2>Our Story</h2>
-    <p>At Loaf & Crust, bread is more than food — it's tradition.</p>
+    <p>At VEC's Bakery, bread is more than food — it's tradition.</p>
     <p>We bake fresh every morning using organic ingredients and time-honored techniques.</p>
 </div>
 
 <footer>
-    © 2026 Loaf & Crust Bakery
+    © 2026 VEC's Bakery
 </footer>
 
 </body>
 </html>
+
