--- a/bakery site/shop.html
+++ b/bakery site/shop.html
@@ -21,16 +21,16 @@
 
         <div class="product-card">
             <img src="https://images.unsplash.com/photo-1586985289688-ca3cf47d3e6e">
-            <h3>Classic Sourdough</h3>
-            <p>$6.50</p>
-            <a href="product.html" class="btn">Add to Cart</a>
+            <h3>Sourdough Tradicional</h3>
+            <p>$100 mex</p>
+            <a href="product.html" class="btn">Agregar al Cesto</a>
         </div>
 
         <div class="product-card">
             <img src="https://images.unsplash.com/photo-1598373182133-52452f7691ef">
-            <h3>French Baguette</h3>
-            <p>$3.50</p>
-            <a href="product.html" class="btn">Add to Cart</a>
+            <h3>Focaccia Italiano</h3>
+            <p>$220 mex</p>
+            <a href="product.html" class="btn">Agregar al Cesto</a>
         </div>
 
     </div>
@@ -42,4 +42,5 @@
 
 </body>
 </html>
+
 
