--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>Featured Breads</h2>
     <div class="products">
         <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1586985289688-ca3cf47d3e6e">
+            <img src="file:///C:/bakery%20site/images/20241229_023635.jpg">
             <h3>Classic Sourdough</h3>
             <p>$6.50</p>
             <a href="product.html" class="btn">View</a>
@@ -57,4 +57,5 @@
 
 </body>
 </html>
+
 
