Fix image source for Classic Sourdough
Updated image source for Classic Sourdough to a remote URL.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>Featured Breads</h2>
     <div class="products">
         <div class="product-card">
-            <img src="file:///C:/bakery%20site/images/20241229_023635.jpg">
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg">
             <h3>Classic Sourdough</h3>
             <p>$6.50</p>
             <a href="product.html" class="btn">View</a>
@@ -57,5 +57,6 @@
 
 </body>
 </html>
+
 
 
