Modify featured breads in index.html
Updated product names and prices in the featured section.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <div class="products">
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg">
-            <h3>Classic Sourdough</h3>
-            <p>$6.50</p>
+            <h3>Focaccia Italiano</h3>
+            <p>$220 MX</p>
             <a href="product.html" class="btn">View</a>
         </div>
 
         <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1598373182133-52452f7691ef">
-            <h3>French Baguette</h3>
-            <p>$3.50</p>
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250222_103616.jpg">
+            <h3>Ciabatta de Masa Madre</h3>
+            <p>$50 MX</p>
             <a href="product.html" class="btn">View</a>
         </div>
 
@@ -57,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
