--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </div>
 
         <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1608198093002-ad4e005484ec">
-            <h3>Whole Wheat</h3>
-            <p>$5.00</p>
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250308_131205.jpg">
+            <h3>bagel De Masa Madre</h3>
+            <p>$11 MX c/u</p>
             <a href="product.html" class="btn">View</a>
         </div>
     </div>
@@ -57,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
