--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <p>$11 MX c/u</p>
             <a href="product.html" class="btn">View</a>
         </div>
+        
+        <div class="product-card">
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/IMG_1103.jpeg">
+            <h3>Pan Tradicional De Masa Madre</h3>
+            <p>$100 MX </p>
+            <a href="product.html" class="btn">View</a>
+        </div>
     </div>
 </div>
 
@@ -57,6 +64,7 @@
 
 </body>
 </html>
+
 
 
 
