Translate index.html content to Spanish

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <div class="navbar">
     <h2>VEC's Bakery</h2>
     <div>
-        <a href="index.html">Home</a>
-        <a href="shop.html">Shop</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="cart.html">Cart</a>
+        <a href="index.html">Inico</a>
+        <a href="shop.html">Ingredientes</a>
+        <a href="about.html">Informacion</a>
+        <a href="contact.html">Contactar</a>
+        <a href="cart.html">Casilla</a>
     </div>
 </div>
 
 <div class="hero">
     <div>
-        <h1>Freshly Baked. Purely Bread.</h1>
-        <p>Artisan loaves baked daily with organic ingredients.</p>
-        <a href="shop.html" class="btn">Shop Now</a>
+        <h1>Recien Horneado. Pan Saludable.</h1>
+        <p>Panes artesanos siempre horneados con ingredientes simples.</p>
+        <a href="shop.html" class="btn">Ingredientes</a>
     </div>
 </div>
 
 <div class="section">
-    <h2>Featured Breads</h2>
+    <h2>Panes</h2>
     <div class="products">
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg">
@@ -64,6 +64,7 @@
 
 </body>
 </html>
+
 
 
 
