--- a/shop.html
+++ b/shop.html
@@ -8,10 +8,12 @@
 
 <div class="navbar">
     <h2>VEC's Bakery</h2>
-    <div>
-        <a href="index.html">Home</a>
-        <a href="shop.html">Shop</a>
-        <a href="cart.html">Cart</a>
+     <div>
+        <a href="index.html">Inico</a>
+        <a href="shop.html">Ingredientes</a>
+        <a href="about.html">Informacion</a>
+        <a href="contact.html">Contactar</a>
+        <a href="cart.html">Casilla</a>
     </div>
 </div>
 
@@ -42,6 +44,7 @@
 
 </body>
 </html>
+
 
 
 
