Update contact.html with new navigation links

--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,12 @@
 
 <div class="navbar">
     <h2>VEC's Bakery</h2>
-    <div>
-        <a href="index.html">Home</a>
-        <a href="shop.html">Shop</a>
+     <div>
+        <a href="index.html">Inico</a>
+        <a href="shop.html">Ingredientes</a>
+        <a href="about.html">Informacion</a>
+        <a href="contact.html">Contactar</a>
+        <a href="cart.html">Casilla</a>
     </div>
 </div>
 
@@ -31,4 +34,5 @@
 
 </body>
 </html>
+
 
