--- a/about.html
+++ b/about.html
@@ -9,8 +9,11 @@
 <div class="navbar">
     <h2>VEC's Bakery</h2>
     <div>
-        <a href="index.html">Home</a>
-        <a href="shop.html">Shop</a>
+        <a href="index.html">Inico</a>
+        <a href="shop.html">Ingredientes</a>
+        <a href="about.html">Informacion</a>
+        <a href="contact.html">Contactar</a>
+        <a href="cart.html">Casilla</a>
     </div>
 </div>
 
@@ -26,4 +29,5 @@
 
 </body>
 </html>
+
 
