--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="section">
-    <h2>Our Bread Collection</h2>
+    <h2>Ingredientes de los panes</h2>
     <div class="products">
 
         <div class="product-card">
@@ -44,6 +44,7 @@
 
 </body>
 </html>
+
 
 
 
