--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,14 @@
 </div>
 
 <div class="section">
-    <h2>Contact Us</h2>
-
-    <form>
-        <input type="text" placeholder="Your Name">
-        <input type="email" placeholder="Your Email">
-        <textarea rows="5" placeholder="Your Message"></textarea>
-        <button class="btn">Send Message</button>
-    </form>
+    <h2>Contacta nos</h2>
+    
+   <h2>Correo Electronico</h2>
+    <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=vitalibeu@gmail.com&hl=en">vitalibeu@gmail.com</a>
+    <h2>Numero de telefono</h2>
+    <h3>+1 512 965 4043</h3>
+    <h2>informacion adicional</h2>
+    <h3>Es mas probable que se les respondara durante las horas de 9:00-18:00 durante dias de la semana</h3>
 </div>
 
 <footer>
@@ -34,5 +34,6 @@
 
 </body>
 </html>
+
 
 
