--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact | VEC's Bakery</title>
+    <title>Contact | Bambino Focaccino</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="navbar">
-    <h2>VEC's Bakery</h2>
+    <h2>Bambino Focaccino</h2>
      <div>
         <a href="index.html">Inico</a>
         <a href="shop.html">Ingredientes</a>
@@ -19,7 +19,7 @@
 
 <div class="section">
     <h1>Contacta nos</h1>
-    <hr></hr>
+    <br></br>
    <h2>Correo Electronico</h2>
     <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=vitalibeu@gmail.com&hl=en">vitalibeu@gmail.com</a>
     <h2>Numero de telefono</h2>
@@ -29,11 +29,12 @@
 </div>
 
 <footer>
-    © 2026 VEC's Bakery
+     Bambino Focaccino 2026
 </footer>
 
 </body>
 </html>
+
 
 
 
