Update product page to reflect new bakery name

--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="navbar">
-    <h2>VEC's Bakery</h2>
+    <h2>Bambino Focaccino</h2>
     <div>
         <a href="index.html">Inico</a>
         <a href="shop.html">Ingredientes</a>
@@ -30,10 +30,11 @@
 </div>
 
 <footer>
-    © 2026 VEC's Bakery
+   2026 Bambino Focaccino
 </footer>
 
 </body>
 </html>
+
 
 
