Change bakery name to Bambino Focaccino
Updated the bakery name from 'VEC's Bakery' to 'Bambino Focaccino' and modified the footer accordingly.

--- a/shop.html
+++ b/shop.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shop | VEC's Bakery</title>
+    <title>Shop | Bambino Focaccino</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="navbar">
-    <h2>VEC's Bakery</h2>
+    <h2>Bambino Focaccino</h2>
      <div>
         <a href="index.html">Inico</a>
         <a href="shop.html">Ingredientes</a>
@@ -39,11 +39,12 @@
 </div>
 
 <footer>
-    © 2026 VEC's Bakery
+    2026 Bambino Focaccino
 </footer>
 
 </body>
 </html>
+
 
 
 
