--- a/cart.html
+++ b/cart.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cart | VEC's Bakery</title>
+    <title>Cart | Bambino Focaccino</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="navbar">
-    <h2>VEC's Bakery</h2>
+    <h2>Bambino Focaccino</h2>
      <div>
         <a href="index.html">Inico</a>
         <a href="shop.html">Ingredientes</a>
@@ -25,10 +25,11 @@
 </div>
 
 <footer>
-    © 2026 VEC's Bakery
+    2026 Bambino Focaccino
 </footer>
 
 </body>
 </html>
+
 
 
