--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About | VEC's Bakery</title>
+    <title>About | Bambino Focaccino</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="navbar">
-    <h2>VEC's Bakery</h2>
+    <h2>Bambino Focaccino</h2>
     <div>
         <a href="index.html">Inico</a>
         <a href="shop.html">Ingredientes</a>
@@ -19,15 +19,16 @@
 
 <div class="section">
     <h2>Our Story</h2>
-    <p>At VEC's Bakery, bread is more than food — it's tradition.</p>
+    <p>At Bambino Focaccino, bread is more than food — it's tradition.</p>
     <p>We bake fresh every morning using organic ingredients and time-honored techniques.</p>
 </div>
 
 <footer>
-    © 2026 VEC's Bakery
+    2026 Bambino Focaccino
 </footer>
 
 </body>
 </html>
+
 
 
