--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,9 @@
     <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=vitalibeu@gmail.com&hl=en">vitalibeu@gmail.com</a>
     <h2>Numero de telefono</h2>
     <h3>+1 512 965 4043</h3>
-    <h2>informacion adicional</h2>
+    <h2>Ubicacion</h2>
+    <a href="https://www.google.com/maps/place/C.+53+465A,+Parque+de+la+Mejorada,+Centro,+97000+M%C3%A9rida,+Yuc./@20.9712464,-89.6197013,17z/data=!3m1!4b1!4m6!3m5!1s0x8f567167b4eb0363:0x47638d2f7be623d9!8m2!3d20.9712464!4d-89.6171264!16s%2Fg%2F11c1_blgjh?entry=ttu&g_ep=EgoyMDI2MDIxOC4wIKXMDSoASAFQAw%3D%3D">C. 53 465A, Parque de la Mejorada, Centro, 97000 Mérida, Yuc.</a>
+    <h2>Informacion adicional</h2>
     <h3>Es mas probable que se les respondara durante las horas de 9:00-18:00 durante dias de la semana</h3>
 </div>
 
@@ -34,6 +36,7 @@
 
 </body>
 </html>
+
 
 
 
