--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="subsection">
+<div class="section">
     <img src="https://images.unsplash.com/photo-1586985289688-ca3cf47d3e6e" style="width:300px;">
     <h2>Classic Sourdough</h2>
     <p>$6.50</p>
@@ -35,6 +35,7 @@
 
 </body>
 </html>
+
 
 
 
