Fix HTML formatting and structure in contact.html

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="section">
+<div class="subsection">
     <h1>Contacta nos</h1>
     <br></br>
    <h2>Correo Electronico</h2>
@@ -36,6 +36,7 @@
 
 </body>
 </html>
+
 
 
 
