Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg">
             <h3>Focaccia Italiano</h3>
             <p>$220 MX</p>
-            <a href="product.html" class="btn">View</a>
+            <a href="shop.html" class="btn">Ingredientes</a>
         </div>
 
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250222_103616.jpg">
             <h3>Ciabatta de Masa Madre</h3>
             <p>$50 MX</p>
-            <a href="product.html" class="btn">View</a>
+            <a href="shop.html" class="btn">Ingredientes</a>
         </div>
 
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250308_131205.jpg">
             <h3>bagel De Masa Madre</h3>
             <p>$11 MX c/u</p>
-            <a href="product.html" class="btn">View</a>
+            <a href="shop.html" class="btn">Ingredientes</a>
         </div>
         
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/IMG_1103.jpeg">
             <h3>Pan Tradicional De Masa Madre</h3>
             <p>$100 MX </p>
-            <a href="product.html" class="btn">View</a>
+            <a href="shop.html" class="btn">Ingredientes</a>
         </div>
     </div>
 </div>
@@ -64,6 +64,7 @@
 
 </body>
 </html>
+
 
 
 
