--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="product-card">
-            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250308_131205.jpg">
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250308_131205.jpg style="Height:200px;">
             <h3>bagel De Masa Madre</h3>
             <p>$11 MX c/u</p>
             <a href="shop.html" class="btn">Ingredientes</a>
@@ -64,6 +64,7 @@
 
 </body>
 </html>
+
 
 
 
