--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <h2>Panes</h2>
     <div class="products">
         <div class="product-card">
-            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg">
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg" style="Height:200px;">
             <h3>Focaccia Italiano</h3>
             <p>$220 MX</p>
             <a href="shop.html" class="btn">Ingredientes</a>
         </div>
 
         <div class="product-card">
-            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250222_103616.jpg">
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250222_103616.jpg" style="Height:200px;">
             <h3>Ciabatta de Masa Madre</h3>
             <p>$50 MX</p>
             <a href="shop.html" class="btn">Ingredientes</a>
@@ -50,7 +50,7 @@
         </div>
         
         <div class="product-card">
-            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/IMG_1103.jpeg">
+            <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/IMG_1103.jpeg" style="Height:200px;">
             <h3>Pan Tradicional De Masa Madre</h3>
             <p>$100 MX </p>
             <a href="shop.html" class="btn">Ingredientes</a>
@@ -64,6 +64,7 @@
 
 </body>
 </html>
+
 
 
 
