--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="hero">
     <div>
-        <h1>Recien Horneado. Pan Saludable.</h1>
+        <h1>Focaccia como ningun otro.</h1>
         <p>Panes artesanos siempre horneados con ingredientes simples.</p>
         <a href="shop.html" class="btn">Ingredientes</a>
     </div>
@@ -68,6 +68,7 @@
 
 </body>
 </html>
+
 
 
 
