--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="section">
-    <h2>Panes</h2>
+    <h2>Foccacias</h2>
     <div class="products">
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg" style="Height:400px;">
@@ -35,7 +35,9 @@
             
             <a href="shop.html" class="btn">Ingredientes</a>
         </div>
-
+    </div>
+    <h2>Otros Panes</h2>
+    <div class="products">
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250222_103616.jpg" style="Height:400px;">
             <h3>Ciabatta de Masa Madre</h3>
@@ -68,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
