--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
         <h1>Focaccia como ningun otro.</h1>
         <p>Panes artesanos siempre horneados con ingredientes simples.</p>
-        <a href="shop.html" class="btn">Ingredientes</a>
+        <a href="contact.html" class="btn">Contacta nos</a>
     </div>
 </div>
 
@@ -84,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
