--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,11 @@
         <div class="product-card">
             <h2>Focaccia Italiano Tradicional</h2>
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg" style="Height:400px;">
-            <p>$220 MX</p>
+            <p>- Harina</p>
+            <p>- Agua</p>
+            <p>- Masa madre</p>
+            <p>- Sal</p>
+            <p>- Aceite</p>
             
             
         </div>
@@ -75,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
