--- a/shop.html
+++ b/shop.html
@@ -23,15 +23,15 @@
         <div class="product-card">
             <h2>Focaccia Italiano Tradicional</h2>
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg" style="Height:400px;">
-            <div class="product-card">
+            <div class="products">
             <p>- Harina</p>
             <p>- Agua</p>
             <p>- Masa madre</p>
-            </div class="product-card">
-            <div class="product-card">
+            </div>
+            <div class="products">
             <p>- Sal</p>
             <p>- Aceite</p>
-            </div class="product-card">
+            </div>
             
         </div>
          <div class="product-card">
@@ -82,6 +82,7 @@
 
 </body>
 </html>
+
 
 
 
