--- a/shop.html
+++ b/shop.html
@@ -27,10 +27,12 @@
             <p>- Harina</p>
             <p>- Agua</p>
             <p>- Masa madre</p>
-            </div>
-            <div class="products">
             <p>- Sal</p>
-            <p>- Aceite</p>
+            <p>- Aceite</p>   
+            </div>
+            <div class="products"> 
+            <h3>Alérgenos</h3>
+            <p>-Contiene Gluten-</p>
             </div>
             
         </div>
@@ -82,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
