--- a/shop.html
+++ b/shop.html
@@ -23,14 +23,14 @@
         <div class="product-card">
             <h2>Focaccia Italiano Tradicional</h2>
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20241229_023635.jpg" style="Height:400px;">
-            <div class="products">
+            <div class="product-card">
             <p>- Harina</p>
             <p>- Agua</p>
             <p>- Masa madre</p>
             <p>- Sal</p>
             <p>- Aceite</p>   
             </div>
-            <div class="products"> 
+            <div class="product-card"> 
             <h3>Alérgenos</h3>
             <p>-Contiene Gluten-</p>
             </div>
@@ -84,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
