--- a/shop.html
+++ b/shop.html
@@ -104,8 +104,8 @@
             </div>
             <div class="product-card"> 
             <h3>Ingredientes Opcionales</h3>
-            <p>- Oregano con Queso Parmesano</p>
-            <p>- Semillas de Sesamo</p>
+            <p>-Oregano con Queso Parmesano-</p>
+            <p>- Semillas de Sesamo-</p>
             </div>
             <div class="product-card"> 
             <h3>Alérgenos</h3>
@@ -119,7 +119,16 @@
         <div class="product-card">
             <h2>Pan Tradicional De Masa Madre</h2>
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/IMG_1103.jpeg" style="Height:400px;">
-            <p>$110 MX </p>
+            <div class="product-card">
+            <p>- Harina</p>
+            <p>- Agua</p>
+            <p>- Masa madre</p>
+            <p>- Sal</p>
+            </div>
+            <div class="product-card"> 
+            <h3>Alérgenos</h3>
+            <p>-Contiene Gluten-</p>
+            </div>
             
             
         </div>
@@ -131,6 +140,7 @@
 
 </body>
 </html>
+
 
 
 
