--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 
         <div class="product-card">
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250308_131205.jpg" style="Height:400px;">
-            <h3>bagel De Masa Madre</h3>
-            <p>$15 MX c/u</p>
+            <h3>Bagel De Masa Madre</h3>
+            <p>$200 MX (Dozena de Bagels)</p>
+            <p>+25 MX Coberturas Variadas</p>
             
             <a href="shop.html" class="btn">Ingredientes</a>
         </div>
@@ -84,6 +85,7 @@
 
 </body>
 </html>
+
 
 
 
