--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="https://raw.githubusercontent.com/Shadowcat-dev/SourDoe/refs/heads/main/20250308_131205.jpg" style="Height:400px;">
             <h3>Bagel De Masa Madre</h3>
             <p>$200 MX (Dozena de Bagels)</p>
-            <p>+25 MX Coberturas Variadas</p>
+            <p>+$25 MX Coberturas Variadas</p>
             
             <a href="shop.html" class="btn">Ingredientes</a>
         </div>
@@ -85,6 +85,7 @@
 
 </body>
 </html>
+
 
 
 
