--- a/shop.html
+++ b/shop.html
@@ -100,6 +100,7 @@
             <p>- Harina</p>
             <p>- Agua</p>
             <p>- Masa madre</p>
+            <p>- Miel</p>
             <p>- Sal</p>
             </div>
             <div class="product-card"> 
@@ -140,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
